fix jump and buildings images

--- a/styles/start.css
+++ b/styles/start.css
@@ -5,6 +5,10 @@
     height: 780px;
 }
 
+.title-container {
+    margin-right: 100px;
+}
+
 .game-title {
     margin-left: -100px;
     align-items: center;
@@ -25,11 +29,27 @@
     background-image: url("../img/background/transparent_start_1.png");
 }
 
+.instruction {
+    margin-left: 90px;
+}
+
+.explenation-container {
+   margin-top: 10px;
+}
+
+.explenation-container h3 {
+    margin-left: -30px;
+}
+
+
+.explenation-container p {
+    margin-left: 110px;
+}
 
 #start-btn{
     background: #FFFFFF;
     box-shadow: -4px -4px 10px rgba(232, 171, 148, 0.5), 4px 4px 10px rgba(225, 63, 30, 0.5);    border-radius: 32px;
-    margin-left: 80px;
+    margin-left: 90px;
     width: 200px;
     height: 50px;
 }
